--- a/src/app/shared/modals/detalle-gastos-modal/detalle-gastos-modal.component.html
+++ b/src/app/shared/modals/detalle-gastos-modal/detalle-gastos-modal.component.html
@@ -9,137 +9,148 @@
 </div>
 
 <div class="modal-body">
-  <h4 class="text-end">Total {{ Total | currency : "ARS" }}</h4>
+  <h4 class="text-end">Total {{ Total | currency: "ARS" }}</h4>
   <hr class="mb-4" />
 
-  @if(Gastos.length === 0) {
-  <p class="text-center text-muted">No hay gastos para mostrar.</p>
-  } @else { @for (gasto of Gastos; track gasto.id) {
-  <div class="mb-2 p-3 border rounded">
-    <h5>Gasto #{{ gasto.id }}</h5>
+  @if (Gastos.length === 0) {
+    <p class="text-center text-muted">No hay gastos para mostrar.</p>
+  } @else {
+    @for (gasto of Gastos; track gasto.id) {
+      <div class="mb-2 p-3 border rounded">
+        <h5>
+          {{ getLabelBySection(stringFuntion(gasto.section)) }} #{{ gasto.id }}
+        </h5>
 
-    <!-- Condicional para mostrar quién generó el gasto -->
-    <p>
-      <strong>Usuario:</strong>
-      @if (gasto.empleado) {
-      {{ gasto.empleado.nombre_completo }} (Empleado) } @else if
-      (gasto.is_local) { Gasto del local cargado por
-      {{ gasto.user?.nombre_completo }}
-      } @else {
-      {{ gasto.user?.nombre_completo }}
-      }
-    </p>
-    <p>
-      <strong>Total:</strong>
-      {{ sumarTodosLosDetalles(gasto) | currency : "ARS" }}
-    </p>
+        <!-- Condicional para mostrar quién generó el gasto o nómina -->
+        <p>
+          <strong>Usuario:</strong>
+          @if (gasto.empleado) {
+            {{ gasto.empleado.nombre_completo }} (Empleado)
+          } @else if (gasto.is_local) {
+            {{ getLabelBySection(stringFuntion(gasto.section)) }} del local
+            cargado por
+            {{ gasto.user?.nombre_completo }}
+          } @else {
+            {{ gasto.user?.nombre_completo }}
+          }
+        </p>
+        <p>
+          <strong>Total:</strong>
+          {{ sumarTodosLosDetalles(gasto) | currency: "ARS" }}
+        </p>
 
-    <c-accordion [alwaysOpen]="true" class="mb-4">
-      @for (detalle of gasto.gasto_detalle; track detalle.id) {
-      <c-accordion-item #item="cAccordionItem" [visible]="false">
-        <ng-template cTemplateId="accordionHeaderTemplate">
-          <button
-            (click)="item.toggleItem()"
-            [collapsed]="!item.visible"
-            cAccordionButton
-          >
-            {{ detalle.tipo_gasto?.descripcion ?? "Sin descripción" }}
-          </button>
-        </ng-template>
+        <!-- Mostrar detalles de gastos solo si es gasto -->
+        @if (gasto.section === "gasto") {
+          <c-accordion [alwaysOpen]="true" class="mb-4">
+            @for (detalle of gasto.gasto_detalle; track detalle.id) {
+              <c-accordion-item #item="cAccordionItem" [visible]="false">
+                <ng-template cTemplateId="accordionHeaderTemplate">
+                  <button
+                    (click)="item.toggleItem()"
+                    [collapsed]="!item.visible"
+                    cAccordionButton
+                  >
+                    {{ detalle.tipo_gasto?.descripcion ?? "Sin descripción" }}
+                  </button>
+                </ng-template>
 
-        <ng-template cTemplateId="accordionBodyTemplate">
-          <div class="accordion-body">
-            <ng-container *ngIf="!detalle.producto">
-              <div class="row">
-                <div class="col-md-3 col-sm-6 mb-1">
-                  <strong>Precio:</strong>
-                  {{ detalle.precio | currency : "ARS" }}
-                </div>
-                <div class="col-md-3 col-sm-6 mb-1">
-                  <strong>Creado:</strong>
-                  {{ detalle.created_at | date : "dd/mm/yyyy" }}
-                </div>
-                <div class="col-md-6 col-sm-12 mb-1">
-                  <strong>Comentario:</strong> {{ detalle.comentario ?? "-" }}
-                </div>
-              </div>
-            </ng-container>
+                <ng-template cTemplateId="accordionBodyTemplate">
+                  <div class="accordion-body">
+                    <ng-container *ngIf="!detalle.producto">
+                      <div class="row">
+                        <div class="col-md-3 col-sm-6 mb-1">
+                          <strong>Precio:</strong>
+                          {{ detalle.precio | currency: "ARS" }}
+                        </div>
+                        <div class="col-md-3 col-sm-6 mb-1">
+                          <strong>Creado:</strong>
+                          {{ detalle.created_at | date: "dd/mm/yyyy" }}
+                        </div>
+                        <div class="col-md-6 col-sm-12 mb-1">
+                          <strong>Comentario:</strong>
+                          {{ detalle.comentario ?? "-" }}
+                        </div>
+                      </div>
+                    </ng-container>
 
-            <!-- Caso Producto -->
-            <ng-container *ngIf="detalle.producto">
-              <div class="row">
-                <div class="col-md-3 col-sm-6 mb-1">
-                  <strong>Marca:</strong> {{ detalle.producto.marca }}
-                </div>
-                <div class="col-md-3 col-sm-6 mb-1">
-                  <strong>Descripción:</strong>
-                  {{ detalle.producto.descripcion }}
-                </div>
-                <div class="col-md-6 col-sm-12 mb-1">
-                  <strong>Comentario:</strong> {{ detalle.comentario ?? "-" }}
-                </div>
-                <div class="col-md-3 col-sm-6 mb-1">
-                  <strong>Cantidad:</strong> {{ detalle.cantidad }}
-                </div>
-                <div class="col-md-3 col-sm-6 mb-1">
-                  <strong>Precio Unitario:</strong>
-                  {{ detalle.precio_unitario | currency : "ARS" }}
-                </div>
-                <div class="col-md-3 col-sm-6 mb-1">
-                  <strong>Total:</strong>
-                  {{ detalle.precio | currency : "ARS" }}
-                </div>
-                <div class="col-md-3 col-sm-6 mb-1">
-                  <strong>Creado:</strong>
-                  {{ detalle.created_at | date : "dd/mm/yyyy" }}
-                </div>
-              </div>
-            </ng-container>
-          </div>
-        </ng-template>
-      </c-accordion-item>
-      }
-    </c-accordion>
+                    <!-- Caso Producto -->
+                    <ng-container *ngIf="detalle.producto">
+                      <div class="row">
+                        <div class="col-md-3 col-sm-6 mb-1">
+                          <strong>Marca:</strong> {{ detalle.producto.marca }}
+                        </div>
+                        <div class="col-md-3 col-sm-6 mb-1">
+                          <strong>Descripción:</strong>
+                          {{ detalle.producto.descripcion }}
+                        </div>
+                        <div class="col-md-6 col-sm-12 mb-1">
+                          <strong>Comentario:</strong>
+                          {{ detalle.comentario ?? "-" }}
+                        </div>
+                        <div class="col-md-3 col-sm-6 mb-1">
+                          <strong>Cantidad:</strong> {{ detalle.cantidad }}
+                        </div>
+                        <div class="col-md-3 col-sm-6 mb-1">
+                          <strong>Precio Unitario:</strong>
+                          {{ detalle.precio_unitario | currency: "ARS" }}
+                        </div>
+                        <div class="col-md-3 col-sm-6 mb-1">
+                          <strong>Total:</strong>
+                          {{ detalle.precio | currency: "ARS" }}
+                        </div>
+                        <div class="col-md-3 col-sm-6 mb-1">
+                          <strong>Creado:</strong>
+                          {{ detalle.created_at | date: "dd/mm/yyyy" }}
+                        </div>
+                      </div>
+                    </ng-container>
+                  </div>
+                </ng-template>
+              </c-accordion-item>
+            }
+          </c-accordion>
+        }
 
-    <c-accordion [alwaysOpen]="true" class="mb-4">
-      @for (mp of gasto.metodo_pago; track mp.id) {
-      <c-accordion-item #item="cAccordionItem" [visible]="false">
-        <ng-template cTemplateId="accordionHeaderTemplate">
-          <button
-            (click)="item.toggleItem()"
-            [collapsed]="!item.visible"
-            cAccordionButton
-          >
-            Método de pago #{{ mp.id }}
-          </button>
-        </ng-template>
+        <c-accordion [alwaysOpen]="true" class="mb-4">
+          @for (mp of gasto.metodo_pago; track mp.id) {
+            <c-accordion-item #item="cAccordionItem" [visible]="false">
+              <ng-template cTemplateId="accordionHeaderTemplate">
+                <button
+                  (click)="item.toggleItem()"
+                  [collapsed]="!item.visible"
+                  cAccordionButton
+                >
+                  Método de pago #{{ mp.id }}
+                </button>
+              </ng-template>
 
-        <ng-template cTemplateId="accordionBodyTemplate">
-          <div class="accordion-body">
-            <div class="row">
-              <div class="col-md-3 col-sm-6 mb-1">
-                <strong>Tipo de pago:</strong> {{ mp.metodo_pago?.tipo }}
-              </div>
-              <div class="col-md-3 col-sm-6 mb-1">
-                <strong>Monto:</strong> {{ mp.monto | currency : "ARS" }}
-              </div>
-              <!-- <div class="col-md-3 col-sm-6 mb-1">
+              <ng-template cTemplateId="accordionBodyTemplate">
+                <div class="accordion-body">
+                  <div class="row">
+                    <div class="col-md-3 col-sm-6 mb-1">
+                      <strong>Tipo de pago:</strong> {{ mp.metodo_pago?.tipo }}
+                    </div>
+                    <div class="col-md-3 col-sm-6 mb-1">
+                      <strong>Monto:</strong> {{ mp.monto | currency: "ARS" }}
+                    </div>
+                    <!-- <div class="col-md-3 col-sm-6 mb-1">
                 <strong>Estado:</strong> {{ mp.estado }}
               </div> -->
-              <!-- <div class="col-md-3 col-sm-6 mb-1">
+                    <!-- <div class="col-md-3 col-sm-6 mb-1">
                 <strong>Creado:</strong>
                 {{ mp.created_at | date : "dd/MM/yyyy" }}
               </div> -->
-              <!-- <div class="col-md-3 col-sm-6 mb-1">
+                    <!-- <div class="col-md-3 col-sm-6 mb-1">
                 <strong>Actualizado:</strong>
                 {{ mp.updated_at | date : "dd/MM/yyyy" }}
               </div> -->
-            </div>
-          </div>
-        </ng-template>
-      </c-accordion-item>
-      }
-    </c-accordion>
-  </div>
-  } }
+                  </div>
+                </div>
+              </ng-template>
+            </c-accordion-item>
+          }
+        </c-accordion>
+      </div>
+    }
+  }
 </div>
